Actions
Bug #10764
closeddrm: NULL pointer errors
Start date:
2019-04-13
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/io/drm/drm_kstat.c: In function 'drm_init_kstats': ../../common/io/drm/drm_kstat.c:78:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/conf.h:37, from ../../common/io/drm/drm_sunmod.h:55, from ../../common/io/drm/drm_sunmod.c:36: ../../common/io/drm/drm_sunmod.c: In function 'drm_supp_register': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/drm/drm_sunmod.c:174:44: note: in expansion of macro 'NULL' INST2NODE0(instance), DDI_NT_DISPLAY, NULL); ^~~~ In file included from ../../common/io/drm/drm_sunmod.h:60:0, from ../../common/io/drm/drm_sunmod.c:36: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ ../../common/io/drm/drm_sunmod.c: In function 'drm_supp_device_capability': ../../common/io/drm/drm_sunmod.c:998:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f274e1d7606d204f203c8eb43894e5190ba0ff88
commit f274e1d7606d204f203c8eb43894e5190ba0ff88 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-22T05:02:18.000Z 10764 drm: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions